--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ async function getGPTResponse(message) {
 }
     </script>
     <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
-<zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cm8dwpwk1005ebgpe2rsfq3b4' height='600px' width='400px'></zapier-interfaces-chatbot-embed>
+<zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cm8dwpwk1005ebgpe2rsfq3b4'></zapier-interfaces-chatbot-embed>
 </script>
 
 </body>
