--- a/index.html
+++ b/index.html
@@ -1,42 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chatbot Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f9;
-    }
-
-    .chat-container {
-      width: 400px;
-      height: 600px;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chatbot Interface</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<div class="chat-container">
-  <script async type="module" src="https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js"></script>
-  <zapier-interfaces-chatbot-embed
-    is-popup="false"
-    chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4"
-    height="600px"
-    width="400px">
-  </zapier-interfaces-chatbot-embed>
-</div>
+    <h1>What can I help with?</h1>
+    <div class="chat-container">
+        <zapier-interfaces-chatbot-embed 
+            is-popup="false" 
+            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4" 
+            height="100%" 
+            width="100%">
+        </zapier-interfaces-chatbot-embed>
+    </div>
 
+    <script src="https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js" async type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
