--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <zapier-interfaces-chatbot-embed 
             is-popup="false" 
             chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4" 
-            height="100%" 
-            width="100%">
+            height="1920px" 
+            width="1080px">
         </zapier-interfaces-chatbot-embed>
     </div>
 
