--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <div class="chat-container">
         <zapier-interfaces-chatbot-embed 
             is-popup="false" 
-            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4" 
-            height="480px" 
-            width="640px">
+            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4">
         </zapier-interfaces-chatbot-embed>
     </div>
 
