--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="chat-container">
         <zapier-interfaces-chatbot-embed 
             is-popup="false" 
-            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4"
-            style="width: 100%; height: 100%;">
+            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4">
         </zapier-interfaces-chatbot-embed>
     </div>
 
