--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <div class="chat-container">
         <zapier-interfaces-chatbot-embed 
             is-popup="false" 
-            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4">
+            chatbot-id="cm8dwpwk1005ebgpe2rsfq3b4" 
+            height="100%" 
+            width="100%">
         </zapier-interfaces-chatbot-embed>
     </div>
 
-    <script async type="module" src="https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js"></script>
+    <script src="https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js" async type="module"></script>
     <script src="script.js"></script>
 </body>
 </html>
